--- a/Simon.csproj
+++ b/Simon.csproj
@@ -55,6 +55,8 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="FeedbackAudio.cs" />
+    <Compile Include="Life\Heart.cs" />
+    <Compile Include="Life\LifeBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="TileColor.cs" />
